# ANA

./: .dockerignore  .env.example  .gitignore  .memory_cache.json  DOCKER.md  Dockerfile.agent  Dockerfile.ui  LICENSE  README.md  agent.py  ana_dashboard.html  check_resources.py  config.json  docker-compose.yml  kill_wake_service.bat  main.py  prompts.py  pyproject.toml  run_chess_server.py  tools.py  wake_service.py  wakeword.bat
src/ana/: __init__.py  agent.py  background_tasks.py  config.py  event_manager.py  monitoring.py  monitoring_dashboard.py  monitoring_dashboard_improved.py  prompts.py  wake_word.py
src/ana/tools/: __init__.py  apps.py  base.py  countdown.py  email.py  file_manager.py  file_search.py  hardware.py  memory.py  monitoring_tools.py  search.py  system.py  time_utils.py  timers.py  weather.py
src/ana/tools/chess/: __init__.py  engine_interface.py  skill.py
src/ana/tools/chess/adapters/: __init__.py  remote_stockfish.py
src/chess_server/: __init__.py  ana_player.py  game_manager.py  models.py  server.py
ui/: ANIMATION_ENHANCEMENTS.md  AVATAR_ANIMATIONS.md  IMPLEMENTATION_SUMMARY.md  VRM_AVATAR_SETUP.md  app-config.ts  package.json  pnpm-lock.yaml
ui/app/: layout.tsx
ui/app/(app)/: layout.tsx
ui/app/api/config/: route.ts
ui/app/chess/: page.tsx
ui/components/app/: chat-transcript.tsx  preconnect-message.tsx  session-info.tsx  session-provider.tsx  session-view.tsx  settings-modal.tsx  tile-layout.tsx  view-controller.tsx  vrm-avatar-scene.tsx  vrm-avatar.tsx  welcome-view.tsx
ui/components/chess/: ChatPanel.tsx  ChessGame.tsx  GameControls.tsx
ui/components/livekit/agent-control-bar/: agent-control-bar.tsx  chat-input.tsx
ui/components/livekit/scroll-area/: scroll-area.tsx
ui/hooks/: useSessionInfo.ts
wake_word/: Hey-ANA.ppn  start_wake_service.bat  stop_wake_service.bat  wake_service.py
