[tool.uv]
environments = ["sys_platform == 'win32'"]

[project]
name = "ANA"
version = "0.0.1"
description = "ANA - Advanced Neural Assistant. Inspired by JARVIS from Iron Man."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Abivarman", email = "jabivarman@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "livekit>=1.0.23",
  "livekit-agents>=1.3.10",
  "livekit-plugins-openai>=1.3.10",
  "livekit-plugins-google>=1.3.10",
  "livekit-plugins-noise-cancellation",
  "mem0ai>=1.0.1",
  "ddgs",
  "langchain_community",
  "requests",
  "python-dotenv",
  "google-genai>=1.57.0",
  "pipwin>=0.5.2",
  "opencv-python>=4.11.0.86",
  "pillow>=12.1.0",
  "numpy>=2.3.4,<2.4.0",
  "sounddevice>=0.5.3",
  "soundfile>=0.13.1",
  "pyserial>=3.5",
  "pvporcupine>=4.0.0",
  "psutil>=6.1.0",
  "send2trash>=1.8.3",
  "aiohttp>=3.11.0",
  "blingfire>=0.1.8",
  "opentelemetry-sdk>=1.21.0",
  "opentelemetry-exporter-otlp>=1.21.0",
  "python-chess>=1.10.0",
]
